Implementation of money transactions standarization